# macemu

./: README.md
BasiliskII/: meson.build  meson_options.txt
BasiliskII/src/: bincue.cpp  cdrom.cpp  emul_op.cpp  ether.cpp  meson.build  rom_patches.cpp  timer.cpp  user_strings.cpp
BasiliskII/src/CrossPlatform/: sigsegv.cpp  vm_alloc.cpp
BasiliskII/src/MacOSX/: config.h  prefs_macos.mm
BasiliskII/src/SDL/: video_sdl2.cpp
BasiliskII/src/Unix/: .gitignore  Makefile.in  autogen.sh  color_scheme.cpp  configure.ac  g_resources.cpp  main_unix.cpp  prefs_editor_gtk.cpp  prefs_editor_gtk3.cpp  prefs_unix.cpp  sysdeps.h  user_strings_unix.cpp  user_strings_unix.h  video_x.cpp  xpram_unix.cpp
BasiliskII/src/Unix/data/: BasiliskII.desktop.in  BasiliskII.metainfo.xml.in
BasiliskII/src/Unix/m4/: esd.m4  gettext.m4  gtk-2.0.m4  gtk-3.0.m4  gtk.m4
BasiliskII/src/Unix/ui/: basiliskii.gresource.xml  help-overlay.ui  menu.ui  prefs-editor.ui
BasiliskII/src/Windows/: config.h  configure.ac  main_windows.cpp  prefs_editor_gtk.cpp  prefs_windows.cpp  sysdeps.h  xpram_windows.cpp
BasiliskII/src/include/: color_scheme.h  prefs_editor.h  user_strings.h
BasiliskII/src/slirp/: libslirp.h  misc.c  slirp.h  slirp_config.h  tcp_subr.c
BasiliskII/src/uae_cpu/: wrapper.py
SheepShaver/: Makefile  meson.build  meson_options.txt
SheepShaver/src/: main.cpp  meson.build  rom_patches.cpp  timer.cpp  user_strings.cpp
SheepShaver/src/CrossPlatform/: sigsegv.cpp
SheepShaver/src/MacOSX/: prefs_macos.mm
SheepShaver/src/MacOSX/Launcher/: LauncherPrefix.h
SheepShaver/src/MacOSX/SheepShaver.xcodeproj/: project.pbxproj
SheepShaver/src/MacOSX/SheepShaver_Xcode8.xcodeproj/: project.pbxproj
SheepShaver/src/MacOSX/config/: config-macosx-aarch64.h  config-macosx-ppc_32.h  config-macosx-x86_32.h  config-macosx-x86_64.h
SheepShaver/src/Qt/: prefs_editor_qt.cpp  prefs_editor_qt.h  prefs_editor_qt.ui
SheepShaver/src/Unix/: .gitignore  Makefile.in  autogen.sh  configure.ac  g_resources.cpp  gresource.cpp  gresource.h  gresource.xml  main_unix.cpp  menu.ui  prefs_editor_gtk.cpp  sysdeps.h  user_strings_unix.cpp  user_strings_unix.h
SheepShaver/src/Unix/data/: SheepShaver.desktop.in  SheepShaver.metainfo.xml.in  menu.ui
SheepShaver/src/Unix/ui/: help-overlay.ui  menu.ui  prefs-editor.ui  sheepshaver.gresource.xml
SheepShaver/src/Windows/: Makefile.in  configure.ac  prefs_windows.cpp  sysdeps.h
SheepShaver/src/include/: prefs_editor.h  user_strings.h
SheepShaver/src/kpx_cpu/src/cpu/ppc/: ppc-execute.cpp
cxmon/src/: sysdeps.h
