option('gtk', type: 'feature', value: 'auto', description: 'Build GTK3 launcher')
option('sdl', type: 'feature', value: 'auto', description: 'Use SDL2 for user interface')
option('bincue', type: 'feature', value: 'auto', description: 'BIN/CUE support')
option('slirp', type: 'feature', value: 'auto', description: 'Use slirp for networking')
option('addressing', type: 'combo', choices: ['real', 'direct'], value: 'real', description: 'Set the addressing mode to use')
option('dyngen', type: 'combo', choices: ['precompiled', 'yes', 'no', 'auto'], value: 'auto', description: 'Use dyngen for PPC emulation')
option('jit', type: 'feature', value: 'auto', description: 'Use just-in-time compilation')
option('mon', type: 'feature', value: 'disabled', description: 'Enable the mon debugger')
option('libvhd', type: 'feature', value: 'auto', description: 'Enable VHD disk images')
option('vosf', type: 'feature', value: 'auto', description: 'enable video on SEGV signals')